Mobile / Advocate For Change / Full Bleed Image should be square, resolves #10410

--- a/src/theme/css/frontend/_general.scss
+++ b/src/theme/css/frontend/_general.scss
@@ -42,3 +42,11 @@
 		}
 	}
 }
+
+.img-square img {
+	height: calc(100vw - (theme('container.padding.DEFAULT') * 2));
+
+	@screen md {
+		height: auto;
+	}
+}
